# medgemma-chat

./: .gitignore  README.md  main.py  pyproject.toml
chat/: app.py  medgemma.py  ui.py
scripts/: sync-from-ubelix.sh  sync-to-ubelix.sh
