[project]
name = "medgemma-chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.9.0",
    "chainlit>=2.6.2",
    "dotenv>=0.9.9",
    "jupyter>=1.1.1",
    "langchain>=0.3.26",
    "langchain-huggingface>=0.3.0",
    "langgraph>=0.5.3",
    "langsmith>=0.4.7",
    "setuptools>=80.9.0",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
    "transformers==4.53.3",
]
